src/components/Header.module.scss
@use "styles/vars" as *;
@use "styles/mixins" as *;

.Header {
    position: fixed;
    top: 0;
    width: 100%;
    @include GlassBlur;

    &__Wrapper {
        max-width: var(--fullWidth);
        margin: auto;
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding: 0.5rem 0.5rem 0.5rem 1rem;
    }

    &__Logo {
        font-weight: 600;
        color: var(--colText);
        user-select: none;
        cursor: pointer;
    }

    &__Block {
        display: flex;
        align-items: center;

        &--Left {
            gap: 0;
            flex-shrink: 1;
            min-width: 0;
        }

        &--Right {
            gap: 0.5rem;
            justify-content: flex-end;
            flex-shrink: 2;
            min-width: 0;
        }
    }

    &__Separator {
        font-size: var(--fontSizeSeparator);
        color: var(--colSub);
        margin-left: 0.5rem;
    }

    &__BtnTheme {
        composes: Btn Btn--Icon from global;
        padding: 0.5rem !important;
    }

    @media (width <= $breakpointMobile) {
        top: auto;
        bottom: 0;

        &__Block {
            gap: 0.25rem;

            &--Left {
                gap: 0.5rem;
            }
        }

        &__Logo,
        &__Separator {
            display: none;
        }
    }
}

